--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.27.2",
     "dayjs": "1.11.11",
     "history": "^5.3.0",
+    "leaflet": "1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^8.0.4",
@@ -68,6 +69,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/faker": "^5.5.8",
     "@types/jest": "^29.1.2",
+    "@types/leaflet": "1.9.12",
     "@types/node": "^16.11.7",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
